# strain-discovery-database

./: .dockerignore  .gitattributes  .gitignore  .zensical.toml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  lefthook.yml  package.env  pyproject.toml
.devcontainer/: dev.docker-compose.yml  devcontainer.json
.github/workflows/: docs.yml  main.yml  new_tag.yml
LICENSES/: MIT.txt
configs/: REUSE.toml
configs/db/: mongo.conf
configs/docker/: dev.Dockerfile  mongo.Dockerfile  mongo.Dockerfile.license
